--- a/games.html
+++ b/games.html
@@ -49,47 +49,31 @@
 <div class="container">
 <div class="box">
 <div id="glist">
-	<h2>New</h2>
-<a href="https://fnaf-ucn.vercel.app/">Fnaf  SL UCN</a>
-<a href="https://whylol.vercel.app/g/re/">Reactle (wordle)</a>
-<a href="https://whylol.vercel.app/g/nu/">Primel (Numberle)</a>
-<a href="https://whylol.vercel.app/g/agario-minigame/">Agario Minigame</a>
-<a href="https://whylol.vercel.app/g/breaklock/">BreakLock</a>
-<a href="https://whylol.vercel.app/g/cubefield/">CubeField</a>
-<a href="https://whylol.vercel.app/g/astray/">Astray</a>
-<a href="https://whylol.vercel.app/g/chroma/">Chroma</a>
-<a href="https://whylol.vercel.app/g/basketball-stars/">Basketball Stars</a>
-<a href="https://whylol.vercel.app/g/webgl-rollingsky/">Rolling Skys</a>
-<a href="https://whylol.vercel.app/g/simon/">Simon says</a>
-
+	<h2>!!!NEW GAMES!!!</h2>
+<a href="/g/paper/">Retro bowl</a>
 
 <h2>Featured</h2>
 <a href="./g/SB/">Sound Board</a>
-<a href="https://whylol.vercel.app/g/RetroBowl/">Retro bowl</a>
-<a href="https://whylol.vercel.app/g/glitch/">Glitch</a>
-<a href="https://whylol.vercel.app/g/mario/">Super Mario 64</a>
-<a href="https://whylol.vercel.app/g/dogeminer/">Doge Miner</a>
-<a href="https://whylol.vercel.app/g/raido/">Radio</a>
-<a href="https://whylol.vercel.app/g/RollingF/">Rolling forest</a>
-<a href="https://whylol.vercel.app/g/Tether/">Tether</a>
-<a href="https://whylol.vercel.app/g/2048/">2048</a>
-<a href="https://whylol.vercel.app/g/cookie/">Cookie Clicker</a>
-<a href="https://whylol.vercel.app/g/doodle-jump/">Doodle Jump</a>
+<a href="./g/RetroBowl/">Retro bowl</a>
+<a href="./g/glitch/">Glitch</a>
+<a href="./g/mario/">Super Mario 64</a>
+<a href="./g/dogeminer/">Doge Miner</a>
+<a href="./g/raido/">Radio</a>
+<a href="./g/RollingF/">Rolling forest</a>
+<a href="./g/Tether/">Tether</a>
+<a href="./g/2048/">2048</a>
+<a href="./">Cookie Clicker</a>
+<a href="./g/doodle-jump/">Doodle Jump</a>
 <h2>Game Series</h2>
-<a href="https://whylol.vercel.app/g/vex3/">Vex 3</a>
-<a href="https://whylol.vercel.app/g/vex4/">Vex 4</a>
-<a href="https://whylol.vercel.app/g/vex5/">Vex 5</a>
-<a href="https://whylol.vercel.app/g/ducklife/">Duck Life</a>
-<a href="https://whylol.vercel.app/g/duckl3/">Duck Life 3</a>
-<a href="https://whylol.vercel.app/g/duckl4/">Duck Life 4</a>
-<a href="https://whylol.vercel.app/g/slope/">Slope</a>
-<a href="https://whylol.vercel.app/g/slope2/">Slope 2</a>
+<a href="./g/vex3/">Vex 3</a>
+<a href="./g/vex4/">Vex 4</a>
+<a href="./g/vex5/">Vex 5</a>
+<a href="./g/ducklife/">Duck Life</a>
+<a href="./g/duckl3/">Duck Life 3</a>
+<a href="./g/duckl4/">Duck Life 4</a>
+<a href="./g/slope/">Slope</a>
+<a href="./g/slope2/">Slope 2</a>
 	
-	<h2> Horror</h2>
-	<a href="https://whylol.vercel.app/g/fnaf1/fnaf.html">Fnaf 1 </a>
-	<a href="https://whylol.vercel.app/g/fnaf2/fnaf.html">Fnaf 2 </a>
-	<a href="https://fnaf-3.vercel.app/">Fnaf 3 </a>
-	<a href="https://whylol.vercel.app/g/fnaf4/fnaf.html">Fnaf 4 </a>
 </div>
 		<a href="https://whylol.vercel.app/request.html">Want a game? Click me</a>
 </div>
