--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
             <li><a href="/games.html">Home</a></li>
             <li><a href="/About.html">TOS</a></li>
             <li><a href="/Credit.html">Credit</a></li>
-            <li><a href="https://axis-network-stat.freshstatus.io/">Status page</a><li>
-            <li><a href="/oggames.html">Old Layout</a><li>
 
            
 
@@ -53,17 +51,8 @@
 <div class="box">
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search for any game" />
 <div id="glist">
-	<h2>4/18/22</h2>
-<a href="./g/re/">Reactle (wordle)</a>
-<a href="./g/nu/">Primel (Numberle)</a>
-<a href="./g/agario-minigame/">Agario Minigame</a>
-<a href="./g/breaklock/">BreakLock</a>
-<a href="./g/cubefield/">CubeField</a>
-<a href="./g/astray/">Astray</a>
-<a href="./g/chroma/">Chroma</a>
-<a href="./g/basketball-stars/">Basketball Stars</a>
-<a href="./g/webgl-rollingsky/">Rolling Skys</a>
-<a href="./g/simon/">Simon says</a>
+	<h2>NEWEST GAMES (JUST UPDATED!)</h2>
+<a href="./g/re/">Paper io  (NEW!!!)</a>
 
 
 <h2>4/18/22</h2>
@@ -86,7 +75,7 @@
 <a href="./g/slope/">Slope</a>
 <a href="./g/slope2/">Slope 2</a>
 </div>
-		<a href="./request.html">Want a game? Click me</a>
+	<h2>Hope u enjoy :)</h2>
 </div>
 </div>
 
