--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a href="./g/re/">Paper io  (NEW!!!)</a>
 
 
-<h2>4/18/22</h2>
+<h2>Main Games</h2>
 <a href="./g/SB/">Sound Board</a>
 <a href="./g/RetroBowl/">Retro bowl</a>
 <a href="./g/glitch/">Glitch</a>
