--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="/games.html">Home</a></li>
             <li><a href="/About.html">TOS</a></li>
             <li><a href="/Credit.html">Credit</a></li>
-
+		 <li><a herf="/pro/ggl.html">google</a></li>
            
 
 
